sass/rahix.scss
@charset "utf-8";

// Variables

$dark-purple: #1c0658;
$purple: #5c2686;
$rose: #ff1690;
$yellow: #f4d676;
$cyan: #36cdc4;

// Font Awesome

$fa-font-path: "/fontawesome";
@import "../fontawesome/fontawesome.scss";
@import "../fontawesome/regular.scss";
@import "../fontawesome/solid.scss";
@import "../fontawesome/brands.scss";

// Bulma

$primary: $purple;
$info: $cyan;
$warning: $yellow;
$danger: $rose;
$link: mix($dark-purple, $rose, 25%);
$link-hover: lighten(mix($dark-purple, $rose, 25%), 10.0);
$text: $dark-purple;

$title-color: $rose;
$subtitle-color: desaturate(lighten($rose, 10.0), 20.0);
$content-heading-color: $rose;
$footer-background-color: $yellow;

@import "../bulma/bulma.sass";

// Custom styles

.rx-header h1 {
    font-family: monospace;
    font-weight: bold;
    font-size: 2em;
}

#wires {
    position: fixed;
    width: 100%;

    svg {
        width: 100%;

        .rx-link {
            font-family: monospace;
            font-weight: bold;
            font-size: 50px;
            fill: $purple;
        }

        .rx-logo {
            fill: $purple;
            stroke: $purple;
        }

        g.wire-group {
            stroke: $rose;

            .wire {
                fill: transparent;
                stroke-width: 4px;
                stroke: inherit;
                stroke-linejoin: round;
            }

            circle.wire {
                fill: $white;
            }

            .anim {
                stroke-dasharray: 100%;
                stroke-dashoffset: 0;
            }
        }

        g.wire-group:nth-child(4n+1) {
            stroke: $cyan;
        }

        g.wire-group:nth-child(4n+2) {
            stroke: $cyan;
        }

        g.wire-group:nth-child(4n+3) {
            stroke: $purple;
        }
    }
}

.notification.is-warning {
    color: inherit;
}

.notification.is-info, .notification.is-danger {
    h1, h2, h3, h4, h5, h6 {
        color: inherit;
    }
}

.icon i {
    color: $purple;
}

footer a.rx-icon-link {
    padding-left: 0.5em;
    padding-right: 0.5em;
}

#content-div {
    .card a.rx-page-link {
        color: $text;
    }

    // Markdown style fixes
    code {
        background: transparentize($white, 0.5);
        margin: 0;
        padding: 0;
        margin-left: 0.1em;
        margin-right: 0.1em;
        padding-left: 0.1em;
        padding-right: 0.1em;
        color: desaturate($rose, 20);
        border: 0.02em solid transparentize($black, 0.7);
        border-radius: 0.1em;
        font-size: inherit;
    }

    strong, b {
        color: currentColor;
    }
}

